force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <description>Captures official citizen service requests such as new water connections, streetlight repairs, or license renewals. Enables tracking of service request lifecycle from submission to completion.</description>
    <label>Service Request</label>
    <nameField>
        <label>Service Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>