force-app/main/default/objects/Service_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects the request with Salesforce’s standard Case object for service tracking and workflows.</description>
    <inlineHelpText>Connects the request with Salesforce’s standard Case object for service tracking and workflows.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>