force-app/main/default/objects/Service_Request__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the request to the citizen who raised it One citizen can raise many service requests (One-to-Many).</description>
    <inlineHelpText>Links the request to the citizen who raised it One citizen can raise many service requests (One-to-Many).</inlineHelpText>
    <label>Citizen</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Requests (Citizen)</relationshipLabel>
    <relationshipName>Service_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>