force-app/main/default/objects/Service_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the request to the citizen who raised it One citizen can raise many service requests (One-to-Many).</description>
    <inlineHelpText>Links the request to the citizen who raised it One citizen can raise many service requests (One-to-Many).</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>