force-app/main/default/objects/Service_Request__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>Captures when the request was submitted.</description>
    <inlineHelpText>Captures when the request was submitted.</inlineHelpText>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>