force-app/main/default/objects/Service_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Defines what kind of service is requested.</description>
    <inlineHelpText>Defines what kind of service is requested.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Road</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Sanitation</fullName>
            </value>
            <value>
                <fullName>Streetlight</fullName>
            </value>
            <value>
                <fullName>Waste Management</fullName>
            </value>
            <value>
                <fullName>Health &amp; Safety</fullName>
            </value>
            <value>
                <fullName>Drainage</fullName>
            </value>
            <value>
                <fullName>Public Transport</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>